# weavehacks-2025

./: .env  IMPLEMENTATION_SUMMARY.md  ITERATION_1_SUMMARY.md  ITERATION_2_SUMMARY.md  LEARNINGS_COMBINED.md  LEARNINGS_FROM_ITERATION_1.md  MANUAL_TESTING_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  README_INTEGRATION.md  README_PANELS.md  README_SENSORS.md  SENSOR_DATA_IMPLEMENTATION.md  TODO  VIDEO_MONITORING_INTEGRATION.md  advanced_caching_layer.py  arxiv_api.py  batch_api_operations.py  claude_flow_integration.py  cloud_connectivity.py  connection_pool_manager.py  data_panel.py  demo_monitoring.py  demo_panels.py  demo_sensor_data.py  demo_swarm_initialization.py  demo_swarm_memory.json  development_swarm.py  enhanced_agent_system.py  enhanced_video_monitoring.py  enhanced_voice_accuracy.py  error_recovery.py  esm2_embeddings.csv  esm_api.py  gs_api.py  integrated_app.py  integrated_lab_system.py  integration_bridge.py  last-git-log  log  (+21 more)
Prototype-0/: .gitignore  DOCUMENTATION.md  README.md  SETUP.md  VOICE_ARCHITECTURE.md  build.sh  description-2.txt  description.txt  jest.config.js  output-of-claude-help.txt  package-lock.json  package.json  setup-python.sh  start.sh  test-claude.js
Prototype-1/: .gitignore  app.py  app_unified.py  app_with_browser_audio.py  claude_interface.py  gemini_interface.py  requirements.txt  speech_recognition_module.py  start_app.sh
Prototype_1/: README.md  app_unified.py  claude_interface.py  experiment_configs.json  requirements.txt  (+4 more)
weavehacks_flow/: README.md  pyproject.toml
weavehacks_flow/src/weavehacks_flow/: main.py
(+118 files in other folders)
