[project]
name = "weavehacks-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.141.0",
    "google-generativeai>=0.8.5",
    "plotly>=6.2.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "streamlit>=1.46.1",
    "whisper>=1.1.10",
]
