[project]
name = "weavehacks_flow"
version = "0.1.0"
description = "weavehacks_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
]

[project.scripts]
kickoff = "weavehacks_flow.main:kickoff"
run_crew = "weavehacks_flow.main:kickoff"
plot = "weavehacks_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
